--- a/src/slides/part-1/css/animation/FakeDropdownMenu.astro
+++ b/src/slides/part-1/css/animation/FakeDropdownMenu.astro
@@ -8,7 +8,7 @@ const subSectionTitle = "Fade in";
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="fake-dropdown">
 		<button type="button">
-			Carte <svg
+			Activité <svg
 				xmlns="http://www.w3.org/2000/svg"
 				viewBox="0 0 20 20"
 				fill="currentColor"
@@ -19,9 +19,9 @@ const subSectionTitle = "Fade in";
 			</svg>
 		</button>
 		<div class="options">
-			<span class="option">🍻  Bières</span>
-			<span class="option">🍹  Cocktails</span>
-			<span class="option">🥤  Sans alcool</span>
+			<span class="option">🏃‍♂️  Course</span>
+			<span class="option">⛷️  Ski</span>
+			<span class="option">🚴  Vélo</span>
 		</div>
 	</div>
 </Slide>
@@ -36,7 +36,7 @@ const subSectionTitle = "Fade in";
 		outline: none;
 		border: 0.06em solid var(--font-color-light);
 		color: var(--font-color-default);
-		background: var(--background-page);
+		background: white;
 		padding: 0.6em 1em;
 		border-radius: 0.25em;
 		font-size: inherit;
@@ -52,7 +52,7 @@ const subSectionTitle = "Fade in";
 		}
 
 		&:hover {
-			background: color(gray, 200);
+			background: color(gray, 100);
 		}
 
 		&:focus {
@@ -74,7 +74,7 @@ const subSectionTitle = "Fade in";
 		position: absolute;
 		top: calc(100% + 0.25em);
 		border: 0.06em solid color(gray, 300);
-
+		background: white;
 		border-radius: 0.25em;
 		min-width: 100%;
 		box-shadow: var(--shadow-lg);
@@ -94,7 +94,7 @@ const subSectionTitle = "Fade in";
 		}
 
 		&:hover {
-			background: color(gray, 200);
+			background: color(gray, 100);
 		}
 	}
 
