--- a/src/slides/part-1/css/transition/Example3DCards.astro
+++ b/src/slides/part-1/css/transition/Example3DCards.astro
@@ -2,7 +2,7 @@
 import Slide from "../../../../components/Slide.astro";
 
 const { title } = Astro.props;
-const subSectionTitle = "";
+const subSectionTitle = "Démos";
 ---
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
