--- a/src/slides/part-1/css/transition/SimpleHover.astro
+++ b/src/slides/part-1/css/transition/SimpleHover.astro
@@ -3,7 +3,7 @@ import CodeBlock from "../../../../components/CodeBlock.astro";
 import SlideDemo from "../../../../components/SlideDemo.astro";
 
 const { title } = Astro.props;
-const subSectionTitle = "Exemple minimal";
+const subSectionTitle = "Utilisation";
 ---
 
 <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
