--- a/src/slides/part-1/vanilla-js/requestanimationframe/RafUsage.astro
+++ b/src/slides/part-1/vanilla-js/requestanimationframe/RafUsage.astro
@@ -30,7 +30,7 @@ animate();`
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
-	<CodeBlock lang="javascript" lines="|1-6|8-10">
+	<CodeBlock lang="javascript" lines="|8-10">
 		{
 			`function loop(callback) {
   (function animate() {
