--- a/src/slides/part-1/vanilla-js/web-animation-api/sections/Usage.astro
+++ b/src/slides/part-1/vanilla-js/web-animation-api/sections/Usage.astro
@@ -16,7 +16,7 @@ const subSectionTitle = "Utilisation";
 </Slide>
 
 <Slide sectionTitle={title} animate={false}>
-	<img src={waapiSupport} alt="WAAPI support" />
+	<img data-src={waapiSupport} alt="WAAPI support" />
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
