--- a/src/slides/part-2/Part2Title.astro
+++ b/src/slides/part-2/Part2Title.astro
@@ -9,7 +9,7 @@ import jsMeme from "../../assets/meme-js-libs.jpeg";
 </Slide>
 
 <Slide>
-	<img src={jsMeme} alt="JS meme" />
+	<img data-src={jsMeme} alt="JS meme" />
 </Slide>
 
 <style>
