--- a/src/slides/part-2/flip/FlipDefinition.astro
+++ b/src/slides/part-2/flip/FlipDefinition.astro
@@ -31,7 +31,7 @@ const subSectionTitle = "Explication";
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="container">
 		<h2><strong>F</strong>irst</h2>
-		<img src={flip1} alt="" />
+		<img data-src={flip1} alt="" />
 	</div>
 
 	<CodeBlock lang="javascript" lines="|1|3">
@@ -46,7 +46,7 @@ const first = element.getBoundingClientRect();`
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 	<div class="container">
 		<h2><strong>L</strong>ast</h2>
-		<img src={flip2} alt="" />
+		<img data-src={flip2} alt="" />
 	</div>
 
 	<CodeBlock lang="javascript" lines="|1|3">
@@ -61,7 +61,7 @@ const last = element.getBoundingClientRect();`
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 	<div class="container">
 		<h2><strong>I</strong>nvert</h2>
-		<img src={flip3} alt="" />
+		<img data-src={flip3} alt="" />
 	</div>
 
 	<CodeBlock lang="javascript" lines="|1,2|4">
