--- a/src/slides/part-2/js-frameworks/react/React.astro
+++ b/src/slides/part-2/js-frameworks/react/React.astro
@@ -13,7 +13,7 @@ const subSectionTitle = "Les APIs intégrées";
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<ReactTitle />
-	<img src={gifDesert} alt="gif desert" />
+	<img data-src={gifDesert} alt="gif desert" />
 </Slide>
 
 <style>
