--- a/src/slides/part-2/js-frameworks/vue/FakeDropdownMenu.astro
+++ b/src/slides/part-2/js-frameworks/vue/FakeDropdownMenu.astro
@@ -1,6 +1,6 @@
 <div class="fake-dropdown">
 	<button type="button">
-		Carte <svg
+		Activité <svg
 			xmlns="http://www.w3.org/2000/svg"
 			viewBox="0 0 20 20"
 			fill="currentColor"
@@ -11,9 +11,9 @@
 		</svg>
 	</button>
 	<div class="options">
-		<span class="option">🍻  Bières</span>
-		<span class="option">🍹  Cocktails</span>
-		<span class="option">🥤  Sans alcool</span>
+		<span class="option">🏃‍♂️  Course</span>
+		<span class="option">⛷️  Ski</span>
+		<span class="option">🚴  Vélo</span>
 	</div>
 </div>
 
@@ -27,7 +27,7 @@
 		outline: none;
 		border: 0.06em solid var(--font-color-light);
 		color: var(--font-color-default);
-		background: var(--background-page);
+		background: white;
 		padding: 0.6em 1em;
 		border-radius: 0.25em;
 		font-size: inherit;
@@ -43,7 +43,7 @@
 		}
 
 		&:hover {
-			background: color(gray, 200);
+			background: color(gray, 100);
 		}
 
 		&:focus {
@@ -64,6 +64,7 @@
 		position: absolute;
 		top: calc(100% + 0.25em);
 		border: 0.06em solid color(gray, 300);
+		background: white;
 		display: flex;
 		flex-direction: column;
 		padding: 0.25em;
@@ -91,7 +92,7 @@
 		}
 
 		&:hover {
-			background: color(gray, 200);
+			background: color(gray, 100);
 		}
 	}
 </style>
