--- a/src/slides/part-2/js-libraries/vanilla-js/VanillaJSIntro.astro
+++ b/src/slides/part-2/js-libraries/vanilla-js/VanillaJSIntro.astro
@@ -62,7 +62,7 @@ const { title } = Astro.props;
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={"Vanilla JS"}>
-	<img src={npmTrends} alt="npm trends for the 3 libraries" />
+	<img data-src={npmTrends} alt="npm trends for the 3 libraries" />
 </Slide>
 
 <style>
