--- a/src/slides/part-3/canvas-2D/Canvas2DExamples.astro
+++ b/src/slides/part-3/canvas-2D/Canvas2DExamples.astro
@@ -12,45 +12,45 @@ import img9 from "./images/demos/image9.jpg";
 
 <div class="grid">
 	<div>
-		<img src={img1} alt="" />
+		<img data-src={img1} alt="" />
 		<a href="https://codepen.io/alexzaworski/pen/mEZvrG">
 			Alex Zaworski - Color Changin'
 		</a>
 	</div>
 	<div>
-		<img src={img2} alt="" />
+		<img data-src={img2} alt="" />
 		<a href="https://observablehq.com/@d3/hierarchical-edge-bundling/2">
 			D3 - Hierarchical Edge Bundling
 		</a>
 	</div>
 	<div>
-		<img src={img3} alt="" />
+		<img data-src={img3} alt="" />
 		<a href="https://codepen.io/linrock/pen/nMadjQ">
 			Linmiao Xu - Falling Confetti
 		</a>
 	</div>
 	<div>
-		<img src={img4} alt="" />
+		<img data-src={img4} alt="" />
 		<a href="https://codepen.io/tsuhre/pen/BYbjyg"> Ben Matthews - Ribbons 2</a>
 	</div>
 	<div>
-		<img src={img5} alt="" />
+		<img data-src={img5} alt="" />
 		<a href="https://youtu.be/gnfgwkVg7vc?t=338"> SoftGames - Garden Tales</a>
 	</div>
 	<div>
-		<img src={img6} alt="" />
+		<img data-src={img6} alt="" />
 		<a href="https://observablehq.com/@d3/choropleth"> D3 - Choropleth</a>
 	</div>
 	<div>
-		<img src={img7} alt="" />
+		<img data-src={img7} alt="" />
 		<a href="https://www.chartjs.org/">chart.js</a>
 	</div>
 	<div>
-		<img src={img8} alt="" />
+		<img data-src={img8} alt="" />
 		<a href="https://codepen.io/mediapipe/pen/RwGWYJw">MediaPipe - Hands</a>
 	</div>
 	<div>
-		<img src={img9} alt="" />
+		<img data-src={img9} alt="" />
 		<a href="https://brm.io/matter-js/demo/#avalanche"> matter-js</a>
 	</div>
 </div>
