--- a/src/slides/part-3/canvas-2D/Canvas2DLibs.astro
+++ b/src/slides/part-3/canvas-2D/Canvas2DLibs.astro
@@ -13,7 +13,7 @@ const subSectionTitle = "Librairies";
 	<h2>Fabric.js</h2>
 	<p>Librairie généraliste pour le canvas 2D</p>
 	<div class="content p-0">
-		<img src={fabric} alt="" />
+		<img data-src={fabric} alt="" />
 		<p class="fragment">
 			Taille <em>(min + gzip)</em> : <strong>85.53kB</strong>
 		</p>
@@ -24,7 +24,7 @@ const subSectionTitle = "Librairies";
 	<h2>Matter.js</h2>
 	<p>Moteur physique 2D</p>
 	<div class="content p-0">
-		<img src={matter} alt="" />
+		<img data-src={matter} alt="" />
 		<p class="fragment">
 			Taille <em>(min + gzip)</em> : <strong>24.52kB</strong>
 		</p>
