--- a/src/slides/part-1/css/transition/ExampleButton.astro
+++ b/src/slides/part-1/css/transition/ExampleButton.astro
@@ -4,7 +4,7 @@ import FlexContainer from "../../../../components/FlexContainer.astro";
 import Slide from "../../../../components/Slide.astro";
 
 const { title } = Astro.props;
-const subSectionTitle = "";
+const subSectionTitle = "Démos";
 ---
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
@@ -54,8 +54,8 @@ const subSectionTitle = "";
 				</svg>
 			</button>
 		</p>
-		<CodeBlock lang="css"
-			>{
+		<CodeBlock lang="css">
+			{
 				`button[aria-expanded="true"] {
     path:nth-child(1) {
       transform: rotate(45deg) scaleX(1.35);
@@ -74,8 +74,8 @@ const subSectionTitle = "";
     }
   }
 }`
-			}</CodeBlock
-		>
+			}
+		</CodeBlock>
 	</FlexContainer>
 </Slide>
 
