--- a/src/slides/part-1/css/transition/ExampleMovieCard.astro
+++ b/src/slides/part-1/css/transition/ExampleMovieCard.astro
@@ -4,13 +4,13 @@ import AvatarWallpaper from "../../../../assets/avatar-wallpaper.jpeg";
 import CodeBlock from "../../../../components/CodeBlock.astro";
 
 const { title } = Astro.props;
-const subSectionTitle = "";
+const subSectionTitle = "Démos";
 ---
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div>
 		<article class="movie-card">
-			<img src={AvatarWallpaper} alt="Avatar wallpaper" />
+			<img data-src={AvatarWallpaper} alt="Avatar wallpaper" />
 
 			<div class="content">
 				<h1>Avatar : La Voie de l’Eau</h1>
@@ -94,25 +94,21 @@ const subSectionTitle = "";
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
-	<CodeBlock lang="css" lines="|1,15|1-4,15|10,15|10-12,15|10,13-15|1,6,7,15|"
-		>{
+	<CodeBlock lang="css">
+		{
 			`.synopsis {
-  opacity: 0;
-  transform: translateY(1em);
-  transition-property: opacity, transform;
-
+  ...
   transition-duration: calc(var(--transition-duration) / 2);
   transition-delay: calc(var(--transition-duration) / 8);
 }
 
 .movie-card:hover .synopsis {
-  opacity: 1;
-  transform: none;
+  ...
   transition-duration: var(--transition-duration);
   transition-delay: calc(var(--transition-duration) / 3);
 }`
-		}</CodeBlock
-	>
+		}
+	</CodeBlock>
 </Slide>
 
 <style lang="scss">
