--- a/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
@@ -1,6 +1,7 @@
 ---
 import Slide from "../../../components/Slide.astro";
 import CanvasWebglIntro from "./CanvasWebglIntro.astro";
+import CanvasWebglLibs from "./CanvasWebglLibs.astro";
 import Shaders from "./shaders/Shaders.astro";
 import Threejs from "./Threejs.astro";
 
@@ -10,5 +11,6 @@ const title = "Canvas WebGL";
 <section>
 	<CanvasWebglIntro title={title} />
 	<Threejs title={title} />
+	<CanvasWebglLibs title={title} />
 	<Shaders title={title} />
 </section>
