--- a/src/slides/part-3/canvas-webgl/Threejs.astro
+++ b/src/slides/part-3/canvas-webgl/Threejs.astro
@@ -11,7 +11,7 @@ const subSectionTitle = "Three.js";
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<h2 class="three">Three.js</h2>
 	<div class="content p-0">
-		<img src={threeSamples} alt="" />
+		<img data-src={threeSamples} alt="" />
 		<p class="fragment">
 			Taille <em>(min + gzip)</em> : <strong>154.28kB</strong>
 		</p>
@@ -50,6 +50,7 @@ renderer.render(scene, camera);`}</code>
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+	<h3>Animation par keyframes</h3>
 	<CodeBlock lang="javascript">
 		{
 			`gsap.to(
