--- a/src/slides/part-1/css/transition/CSSTransition.astro
+++ b/src/slides/part-1/css/transition/CSSTransition.astro
@@ -5,6 +5,7 @@ import ExampleButton from "./ExampleButton.astro";
 import ExampleMovieCard from "./ExampleMovieCard.astro";
 import RotationBezierCurves from "./RotationBezierCurves.astro";
 import SimpleHover from "./SimpleHover.astro";
+import TransitionGraph from "./TransitionGraph.svelte";
 import TranslateBad from "./TranslateBad.astro";
 import TranslateGood from "./TranslateGood.astro";
 import TranslationCurves from "./TranslationCurves.astro";
@@ -44,5 +45,9 @@ const title = "Transition CSS";
 
 	<Slide>
 		<h1>{title} - recap</h1>
+	</Slide>
+
+	<Slide>
+		<TransitionGraph />
 	</Slide>
 </section>
