--- a/src/slides/part-3/canvas-2D/Canvas2D.astro
+++ b/src/slides/part-3/canvas-2D/Canvas2D.astro
@@ -9,6 +9,7 @@ import Canvas2DDemo2 from "./Canvas2DDemo2.svelte";
 import Canvas2DDemo3 from "./Canvas2DDemo3.svelte";
 import Canvas2DDemo4 from "./Canvas2DDemo4.svelte";
 import Canvas2DExamples from "./Canvas2DExamples.astro";
+import Canvas2DGraph from "./Canvas2DGraph.svelte";
 import Canvas2DLibs from "./Canvas2DLibs.astro";
 
 const title = "Canvas 2D";
@@ -101,6 +102,10 @@ ctx.fillRect(100, 100, 200, 200);`
 
 	<Slide>
 		<h1>{title} - recap</h1>
+	</Slide>
+
+	<Slide>
+		<Canvas2DGraph />
 	</Slide>
 </section>
 
