--- a/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebgl.astro
@@ -1,5 +1,6 @@
 ---
 import Slide from "../../../components/Slide.astro";
+import CanvasWebglGraph from "./CanvasWebglGraph.svelte";
 import CanvasWebglIntro from "./CanvasWebglIntro.astro";
 import CanvasWebglLibs from "./CanvasWebglLibs.astro";
 import Shaders from "./shaders/Shaders.astro";
@@ -13,4 +14,7 @@ const title = "Canvas WebGL";
 	<Threejs title={title} />
 	<CanvasWebglLibs title={title} />
 	<Shaders title={title} />
+	<Slide>
+		<CanvasWebglGraph />
+	</Slide>
 </section>
