--- a/src/slides/part-1/css/animation/CSSAnimation.astro
+++ b/src/slides/part-1/css/animation/CSSAnimation.astro
@@ -29,7 +29,7 @@ const title = "Animation CSS";
 	<FakeDropdownMenu title={title} />
 	<Loaders title={title} />
 	<SVGAnimation title={title} />
-	<AnimationStates {title} />
+	<!-- <AnimationStates {title} /> -->
 
 	<Slide>
 		<h1>{title} - recap</h1>
