--- a/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
+++ b/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
@@ -129,7 +129,7 @@ void main() {
 		<iframe
 			width="900"
 			height="500"
-			data-src="https://www.shadertoy.com/embed/tslGz7?gui=true&t=10&paused=true&muted=false"
+			data-src="https://www.shadertoy.com/embed/ltjBzK?gui=true&t=10&paused=true&muted=false"
 			allowfullscreen></iframe>
 	</div>
 </Slide>
@@ -180,6 +180,11 @@ void main() {
 	h3 {
 		font-size: 1.5em;
 		margin-block: -2em 0;
+	}
+	iframe {
+		height: 60vh;
+		width: auto;
+		aspect-ratio: 9/5;
 	}
 	img {
 		height: 60vh;
