feat: add part 4

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,10 @@ import JSLibraries from "../slides/part-2/js-libraries/JSLibraries.astro";
 import Part3Title from "../slides/part-3/Part3Title.astro";
 import Canvas2D from "../slides/part-3/canvas-2D/Canvas2D.astro";
 import CanvasWebgl from "../slides/part-3/canvas-webgl/CanvasWebgl.astro";
+import Accessibility from "../slides/part-4/Accessibility.astro";
+import Part4Title from "../slides/part-4/Part4Title.astro";
+import Why from "../slides/part-4/Why.astro";
+import Breathe from "../slides/part-2/Breathe.astro";
 ---
 
 <Layout
@@ -38,11 +42,17 @@ import CanvasWebgl from "../slides/part-3/canvas-webgl/CanvasWebgl.astro";
 			<Flip />
 			<JSFrameworks />
 			<JSLibraries />
+			<Breathe />
 
 			<!-- Part 3 : Canvas -->
 			<Part3Title />
 			<Canvas2D />
 			<CanvasWebgl />
+
+			<!-- Part 4 : Outro -->
+			<Part4Title />
+			<Why />
+			<Accessibility />
 		</div>
 	</main>
 </Layout>
