feat: add recap tables

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ import Accessibility from "../slides/part-4/Accessibility.astro";
 import Part4Title from "../slides/part-4/Part4Title.astro";
 import Why from "../slides/part-4/Why.astro";
 import Breathe from "../slides/part-2/Breathe.astro";
+import Recap from "../slides/part-4/Recap.astro";
 ---
 
 <Layout
@@ -53,6 +54,7 @@ import Breathe from "../slides/part-2/Breathe.astro";
 			<Part4Title />
 			<Why />
 			<Accessibility />
+			<Recap />
 		</div>
 	</main>
 </Layout>
