--- a/src/slides/intro/RenderingPipeline.astro
+++ b/src/slides/intro/RenderingPipeline.astro
@@ -6,8 +6,8 @@ import style from "./images/Style.jpg";
 import layout from "./images/Layout.jpg";
 import paint from "./images/Paint.jpg";
 import composite from "./images/Composite.jpg";
-import cpu from "./images/cpu.png";
-import gpu from "./images/gpu.png";
+import cpu from "../../assets/cpu.png";
+import gpu from "../../assets/gpu.png";
 import gpuImage from "./images/gpu-image.png";
 import cpuImage from "./images/cpu-image.png";
 import memeJs from "../../assets/meme-js-developer.jpeg";
