--- a/src/slides/part-1/vanilla-js/web-animation-api/WebAnimationAPI.astro
+++ b/src/slides/part-1/vanilla-js/web-animation-api/WebAnimationAPI.astro
@@ -2,7 +2,7 @@
 import Slide from "../../../../components/Slide.astro";
 import WAAPIGraph from "./WAAPIGraph.svelte";
 import WAAPIIntro from "./WAAPIIntro.astro";
-import WAAPIOutro from "./WAAPIOutro.astro";
+import WAAPIRecap from "./WAAPIRecap.astro";
 import ControlingExecution from "./sections/ControlingExecution.astro";
 import Usage from "./sections/Usage.astro";
 
@@ -15,7 +15,8 @@ const title = "Web Animation API";
 	<Usage title={title} />
 	<ControlingExecution title={title} />
 
-	<WAAPIOutro title={title} />
+	<WAAPIRecap title={title} />
+
 	<Slide>
 		<WAAPIGraph />
 	</Slide>
