feat: add inspiration and last slides

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,7 @@ import Part4Title from "../slides/part-4/Part4Title.astro";
 import Why from "../slides/part-4/Why.astro";
 import Breathe from "../slides/part-2/Breathe.astro";
 import Recap from "../slides/part-4/Recap.astro";
+import Inspiration from "../slides/part-4/Inspiration.astro";
 ---
 
 <Layout
@@ -54,6 +55,7 @@ import Recap from "../slides/part-4/Recap.astro";
 			<Part4Title />
 			<Why />
 			<Accessibility />
+			<Inspiration />
 			<Recap />
 		</div>
 	</main>
