--- a/src/slides/part-3/canvas-webgl/CanvasWebglLibs.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebglLibs.astro
@@ -41,37 +41,49 @@ const subSectionTitle = "Autres librairies";
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="container">
 		<h3>Shree.js</h3>
-		<p>Version (très) allégée de three.js</p>
+		<p>
+			Version très (très) allégée de three.js
+			<strong class="fragment">(6.9kB)</strong>
+		</p>
 	</div>
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="container">
 		<h3>Shree.js</h3>
-		<p>Version (très) allégée de three.js</p>
+		<p>
+			Version très (très) allégée de three.js
+			<strong>(6.9kB)</strong>
+		</p>
 
 		<h3>Pixi.js</h3>
-		<p>Moteur de rendu WebGL 2D</p>
+		<p>
+			Moteur de rendu WebGL 2D
+			<strong class="fragment">(219.6kB)</strong>
+		</p>
 	</div>
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="container">
 		<h3>Shree.js</h3>
-		<p>Version (très) allégée de three.js</p>
+		<p>Version très (très) allégée de three.js <strong>(6.9kB)</strong></p>
 
 		<h3>Pixi.js</h3>
-		<p>Moteur de rendu WebGL 2D</p>
+		<p>Moteur de rendu WebGL 2D <strong>(219.6kB)</strong></p>
 
 		<h3>Rive</h3>
-		<p>Runtime pour des animations interactives, supporte Canvas 2D et WebGL</p>
+		<p>
+			Runtime pour des animations interactives, supporte Canvas 2D et WebGL
+			<strong class="fragment">(24.9kB)</strong>
+		</p>
 	</div>
 </Slide>
 
 <style lang="scss">
 	.container {
 		text-align: left;
-		width: 40ch;
+		width: 45ch;
 		margin-top: 2em;
 	}
 	h3 {
